tests/ui/tool-attributes/unknown-tool-name.rs
#[foo::bar] //~ ERROR failed to resolve: use of unresolved module or unlinked crate `foo`
fn main() {}
